k8s_manifests/hodr_service.yml
apiVersion: v1
kind: Service
metadata:
  name: service-hodr
spec:
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
  type: NodePort
  selector:
    app: hodr
