k8s_manifests/alb_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alb-ingress-nginx
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  rules:
    - host: fampay.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-ingress-controller
                port:
                  number: 80
  tls:
    - hosts:
        - fampay.com
      secretName: tls-secret
