k8s_manifests/network_policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-hodr-to-bran
spec:
  podSelector:
    matchLabels:
      app: hodr
  policyTypes:
  - Ingress
  ingress:
  - from: []
