k8s_manifests/network_policy_allow.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: hodr-allow-policy
spec:
  podSelector:
    matchLabels:
      app: hodr
  policyTypes:
  - Ingress
  ingress:
    - from:
       - podSelector:
          matchLabels:
            app: ingress-nginx-controller
       - podSelector:
          matchLabels:
            app: bran
