k8s_manifests/network_policy_deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
spec:
  podSelector:
    matchLabels:
      app: hodr
  policyTypes:
  - Ingress
